<resources>
    <string name="app_name">tracker</string>
    <string name="gps_enabled">GPS is not Enabled!</string>
    <string name="gps_enabled_question">Do you want to enable GPS?</string>
    <string name="yes">yes</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="time">Time of request:</string>
    <string name="phone_id">phone ID:</string>
    <string name="response">Response:</string>




</resources>
